# corrai

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENCE.md  LICENSE.md  README.md  Sensitivity analysis and multi-objective optimisation.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml  main.yml
corrai/: __init__.py  base.py  cluster.py  compat.py  connector.py  custom_transformers.py  fmu.py  interactive.py  learning.py  math.py  measure.py  metrics.py  multi_optimize.py  optimize.py  sampling.py  sensitivity.py  surrogate.py  transformers.py  tsgenerator.py  utils.py  variant.py
corrai.egg-info/: requires.txt
corrai/base/: math.py  metrics.py  mixin.py  model.py  objfunctions.py  parameter.py  sampling.py  simulate.py  solar.py  utils.py
corrai/learning/: cluster.py  error_detection.py  model_selection.py  sampling.py  time_series.py
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/api_reference/: fmu.rst  index.rst  metrics.rst  model.rst  optimize.rst  sampling.rst  sensitivity.rst  surrogate.rst
notebooks/: conso_30T.csv  dev_error_fit.py  dev_sparse.py  dev_time_series_10_step_Ahead.py  dev_time_series_1_step_Ahead.py  dev_time_series_rea_case.py  dev_time_series_rea_case_corrai.py  trash.py
requirements/: dev.txt  docs.txt  install-min.txt  tests.txt
tests/: test_base.py  test_cluster.py  test_connector.py  test_custom_transformers.py  test_fmu.py  test_interactive.py  test_learning.py  test_math.py  test_measure.py  test_metrics.py  test_multi_optimize.py  test_optimize.py  test_sampling.py  test_sensitivity.py  test_surrogate.py  test_transformers.py  test_tsgenerator.py  test_utils.py  test_variant.py
tests/base/: test_math.py  test_metrics.py  test_mixin.py  test_model.py  test_objfunctions.py  test_parameter.py  test_sampling.py  test_simulate.py  test_solar.py  test_utils.py
tests/learning/: test_cluster.py  test_error_detection.py  test_model_selection.py  (+2 more)
tutorials/: Domestic hot and grey water generation.ipynb  FMU models Handling.ipynb  Identification_python model of an opaque wall.ipynb  MeasureDat example_Cleaning and selection of data.ipynb  MeasuredDats_example.ipynb  SA and Identification example_Modelica & python model of a green façade.ipynb  Sensitivity analysis and multi-objective optimisation.ipynb  Sensitivity analysis_python model of an opaque wall.ipynb  Time_series_forecasting.ipynb
(+25 files in other folders)
