
[project]
name = "corrai"
version = "1.1.0"
description = "Model sampling, sensitivity analisys, uncertainty, surrogates"
readme = "README.md"
license = "BSD-3-Clause"
license-files = [
    "LICENSE.md",
]
authors = [
  { name = "Nobatek/INEF4", email = "bdurandestebe@nobatek.inef4.com" },
]
urls = { "Homepage" = "https://github.com/BuildingEnergySimulationTools/corrai" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<4.0",
    "scipy>=1.12,<3.0",
    "scikit-learn>=1.4,<3.0",
    "pymoo>=0.6.0.1",
    "salib>=1.4.7",
    "fmpy>=0.3.6",
    "matplotlib>=3.8,<4.0",
    "plotly>=5.3.1",
    "fastprogress>=1.0.3",
    "ipython>=8.0,<9.0",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

